docs: update readme for java 22